--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@img-comparison-slider/react": "^8.0.2",
     "@radix-ui/react-icons": "^1.3.2",
     "next": "15.1.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
