--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,12 @@ jobs:
         private-ssh-key: ${{ secrets.SERVER_SSH_KEY }}
         ssh-port: 65002
         destination-path: /domains/reference8.com/public_html/
+
+      - name: 📂 Push files to build branch
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: build
+          FOLDER: build
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MESSAGE: "Build: ({sha}) {msg}"
