--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,4 @@ jobs:
         BRANCH: deploy
         FOLDER: build
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        MESSAGE: "Build ({sha}) {msg}"
+        MESSAGE: "Build: ({sha}) {msg}"
