--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,11 @@ jobs:
         npm install
         npm run build
     
-    - name: 📂 Push files to build branch
+    - name: 📂 Push files to branch
       uses: s0/git-publish-subdir-action@develop
       env:
         REPO: self
-        BRANCH: deploy
+        BRANCH: master
         FOLDER: build
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         MESSAGE: "Build: ({sha}) {msg}"
-        TARGET_DIR: build
