--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
   web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v4
